--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,15 +9,19 @@
     android:orientation="vertical"
     tools:context=".SplashActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="P.O.S"
-        android:textSize="52sp"
-        android:textColor="@color/colorPrimary"
-        android:textStyle="bold"
-        android:id="@+id/tvSplashTitle"/>
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="P.O.S"-->
+<!--        android:textSize="52sp"-->
+<!--        android:textColor="@color/colorPrimary"-->
+<!--        android:textStyle="bold"-->
+<!--        android:id="@+id/tvSplashTitle"/>-->
 
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/icon"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,9 +31,4 @@
         android:id="@+id/tvSplashDescription"
         android:layout_marginVertical="10dp"/>
 
-    <ProgressBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/pbSplash"
-        android:visibility="invisible"/>
 </LinearLayout>
