--- a/app/src/main/res/layout/activity_check_out.xml
+++ b/app/src/main/res/layout/activity_check_out.xml
@@ -143,18 +143,25 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_marginVertical="10dp">
                 <Button
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:background="@drawable/button_border_fill"
                     android:text="Next"
                     android:textColor="@color/colorWhite"
                     android:layout_margin="5dp"
                     android:id="@+id/btnCheckOut"/>
 
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/button_border"
+                    android:text="Add Note"
+                    android:visibility="gone"
+                    android:layout_marginHorizontal="5dp"
+                    android:id="@+id/btnCheckOutAddNote"/>
             </LinearLayout>
 
         </LinearLayout>
