--- a/app/src/main/res/layout/activity_detail_transaction.xml
+++ b/app/src/main/res/layout/activity_detail_transaction.xml
@@ -216,7 +216,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="5dp"
+            android:layout_marginBottom="5dp"
             android:textColor="@color/colorPrimary"
             android:layout_marginHorizontal="5dp"
             android:text="Confirm Payment"
