--- a/app/src/main/res/layout/activity_manage_merchant.xml
+++ b/app/src/main/res/layout/activity_manage_merchant.xml
@@ -107,6 +107,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/btnMerchant"
+                android:textColor="@color/colorWhite"
                 android:background="@drawable/button_border_fill"
                 android:text="Set Up Merchant"/>
 
