--- a/app/src/main/res/layout/activity_merchant.xml
+++ b/app/src/main/res/layout/activity_merchant.xml
@@ -6,29 +6,42 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:padding="20sp"
     tools:context=".merchant.MerchantActivity">
 
-    <TextView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Choose Merchant"
-        android:textSize="24sp"
-        android:textColor="@color/colorBlack"
-        android:gravity="center"
-        android:id="@+id/tvMerchant"/>
+        android:layout_margin="10dp"
+        android:elevation="10dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Choose Merchant"
+                android:textSize="24sp"
+                android:textColor="@color/colorBlack"
+                android:gravity="center"
+                android:id="@+id/tvMerchant"/>
 
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginVertical="20sp"
-        android:id="@+id/spMerchant"/>
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginVertical="20sp"
+                android:id="@+id/spMerchant"/>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnMerchant"
-        android:background="@drawable/button_border_fill"
-        android:text="Select Merchant"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/btnMerchant"
+                android:textColor="@color/colorWhite"
+                android:background="@drawable/button_border_fill"
+                android:text="Select Merchant"/>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
 
 </LinearLayout>
