--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -25,7 +25,7 @@
                 android:text="Sign Up"
                 android:gravity="center"
                 android:textColor="@color/colorBlack"
-                android:textSize="32sp"
+                android:textSize="24sp"
                 android:layout_marginBottom="30sp"/>
 
             <EditText
@@ -60,6 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/btnSignUp"
+                android:textColor="@color/colorWhite"
                 android:background="@drawable/button_border_fill"
                 android:text="Create Account"/>
 
