--- a/app/src/main/res/layout/row_payment_list.xml
+++ b/app/src/main/res/layout/row_payment_list.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="60dp"
     android:layout_margin="5dp"
     android:elevation="10dp">
 
@@ -24,6 +24,7 @@
             android:layout_width="0dp"
             android:layout_weight="7"
             android:layout_height="match_parent"
+            android:gravity="center_vertical"
             android:orientation="vertical">
 
             <TextView
@@ -40,11 +41,11 @@
                 android:gravity="center_vertical"
                 android:id="@+id/tvRowListPaymentNote"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:id="@+id/tvRowListPaymentCreatedBy"/>
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:gravity="center_vertical"-->
+<!--                android:id="@+id/tvRowListPaymentCreatedBy"/>-->
         </LinearLayout>
 
         <TextView
