--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -70,4 +70,14 @@
             android:id="@+id/action_nav_slideshow_to_nav_home"
             app:destination="@id/nav_check_out" />
     </fragment>
+
+    <fragment
+        android:id="@+id/nav_about"
+        android:name="com.chcreation.pointofsale.AboutFragment"
+        android:label="About Creator"
+        tools:layout="@layout/fragment_about" >
+        <action
+            android:id="@+id/action_nav_slideshow_to_nav_home"
+            app:destination="@id/nav_check_out" />
+    </fragment>
 </navigation>
