- Add Image as Header and Footer on Receipt - Add Filter on Analytic and Transaction - Fixing Bugs on Analytic

--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -41,6 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:id="@+id/btnAddUser"
+        android:textColor="@color/colorWhite"
         android:background="@drawable/button_border_fill"
         android:text="Add User"/>
 
