--- a/app/src/main/res/layout/activity_receipt.xml
+++ b/app/src/main/res/layout/activity_receipt.xml
@@ -31,6 +31,14 @@
                 android:layout_marginBottom="100dp"
                 tools:context=".checkout.ReceiptActivity">
 
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/default_image"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="10dp"
+                    android:id="@+id/ivReceiptMerchantImage"/>
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -303,7 +311,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/colorBlack"
                     android:gravity="center"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     android:text="Trans Code : #11"
                     android:id="@+id/tvReceiptTransCode"/>
 
@@ -312,9 +320,18 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/colorBlack"
                     android:gravity="center"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     android:text="25 Juli 2020"
                     android:id="@+id/tvReceiptDate"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorBlack"
+                    android:gravity="center"
+                    android:textSize="16sp"
+                    android:layout_marginTop="20sp"
+                    android:text="- - - Thank You - - -"/>
 
             </LinearLayout>
 
