--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,7 +25,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="8"
-            app:queryHint="Search Here"
+            app:queryHint="Search Everything Here"
             app:iconifiedByDefault="false"
             android:id="@+id/svHomeSearch"
             android:visibility="invisible"/>
