--- a/app/src/main/res/layout/activity_new_category.xml
+++ b/app/src/main/res/layout/activity_new_category.xml
@@ -27,6 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btnNewCategory"
+        android:textColor="@color/colorWhite"
         android:background="@drawable/button_border_fill"
         android:text="Create"/>
 
