--- a/app/src/main/res/layout/activity_new_customer.xml
+++ b/app/src/main/res/layout/activity_new_customer.xml
@@ -23,7 +23,7 @@
         <TextView
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:text="P"
+            android:text="C"
             android:textSize="36sp"
             android:gravity="center"
             android:textStyle="bold"
