--- a/app/src/main/res/layout/activity_new_product.xml
+++ b/app/src/main/res/layout/activity_new_product.xml
@@ -175,7 +175,7 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/etProductStock"
                         android:inputType="number"
-                        android:text="0"
+                        android:text="1"
                         android:textAlignment="center"
                         android:layout_weight="2"/>
 
@@ -193,6 +193,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:id="@+id/btnProductSave"
+                android:textColor="@color/colorWhite"
                 android:background="@drawable/button_border_fill"
                 android:text="save"/>
         </LinearLayout>
